[package]
name = "trackable_s3_stream"
description = "AWS S3 stream implementation with callback to track progress"
repository = "https://github.com/sapessi/trackable_s3_stream"
readme = "README.md"
license-file = "LICENSE"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-sdk-s3 = "1.48.0"
aws-smithy-types = { version = "1.2.4", features = ["hyper-0-14-x"] }
futures = "0.3.25"
hyper = { version = "0.14.23", features = ["stream"] }
tokio = { version = "1.34.0", features = ["fs", "macros"] }

[dev-dependencies]
indicatif = "0.17.2"
aws-config = "1.5.5"
dotenv = "0.15.0"
